# vmrest-rs

./: .gitignore  Cargo.toml  README.md  vmrest.json
examples/: test.rs
src/: error.rs  lib.rs  types.rs
