[package]
name = "vmrest-rs"
authors = ["cauvmou"]
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "^0.12"
serde_with = "3.11.0"
log = "0.4.22"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
simple_logger = "5.0.0"

[[example]]
name="test"